Prototype HTML5 Assignment Submission

--- a/index.html
+++ b/index.html
@@ -1,22 +1,199 @@
-<!doctype html>
-
+<!DOCTYPE html>
+<!-- The document type declaration specifies HTML5 -->
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- Character encoding: ensures correct rendering of text -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Viewport: enables responsive design on different devices -->
+    <meta name="description" content="A brief history and overview of the University of Arkansas at Little Rock including academics, student life, campus, athletics, and collections." />
+    <!-- Description: summary of page content for search engines -->
+    <meta name="author" content="Dante Colon" />
+    <!-- Author: identifies the author of the document -->
+    <title>University of Arkansas at Little Rock: A Brief History</title>
+    <!-- Title of the document shown in the browser tab -->
+  </head>
+  <body>
+    <!-- Main region wraps all visible content -->
+    <main id="top">
+      <!-- Header region containing the primary heading -->
+      <header>
+        <h1>University of Arkansas at Little Rock: A Brief History</h1>
+      </header>
+      <!-- End of header -->
 
-  <title>IFSC 11003 - Web Technologies | Dante Colon</title>
-  <meta name="description" content="Keyword Rich Description">
-  <meta name="author" content="Dante Colon">
+      <!-- Navigation menu for site links -->
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html" title="Go to the home page">Home</a>
+          </li>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock" title="Read more about UA Little Rock on Wikipedia">About</a>
+          </li>
+          <li>
+            <a href="https://ualr.edu" target="_blank" title="Visit the UALR official website">UALR</a>
+          </li>
+          <li>
+            <a href="mailto:DLorenzoColon@gmail.com" title="Send me mail">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- End of navigation -->
 
-</head>
+      <!-- Content section containing examples of many HTML elements -->
+      <section id="content">
+        <h2>History</h2>
+        <p>
+          The <strong>University of Arkansas at Little Rock</strong> (UA Little Rock) is a public
+          research university in Little Rock, Arkansas. Established as Little Rock
+          Junior College by the Little Rock School District in 1927, the institution
+          became a private four‑year university under the name <em>Little Rock University</em>
+          in 1957. It returned to public status in 1969 when it merged with the University
+          of Arkansas System under its present name.
+        </p>
+        <p>
+          At 250 acres (100 ha), the UA Little Rock campus encompasses more than 56
+          buildings, including the Center for Nanotechnology Integrative Sciences, the
+          Emerging Analytics Center, the Sequoyah Research Center, and the Ottenheimer
+          Library. Additionally, UA Little Rock houses special learning facilities
+          that include a learning resource center, art galleries, KUAR public radio
+          station, University Television, and a campus‑wide wireless network. It is
+          classified among <q cite="https://en.wikipedia.org/wiki/Carnegie_Classifications" >R2: Doctoral
+          Universities – High research activity</q>.
+        </p>
 
-<body>
-  <h1>Dante Colon</h1>
+        <h3>Campus</h3>
+        <p>
+          The former campus of Little Rock Junior College is now (2019) the campus of
+          Philander Smith University. Students benefit from the proximity of the
+          campus to downtown Little Rock, enabling access to a wide array of
+          recreational, entertainment, educational, internship and employment
+          opportunities that are <strong>not available anywhere else in Arkansas</strong>.
+        </p>
 
-  <nav>
-    <ul>
-        <li><a href="prototype/index.html">Prototype Assignment</a></li>
-    </ul>
-  </nav>
-</body>
+        <h4>Academics</h4>
+        <p>
+          UA Little Rock offers more than 100 undergraduate degrees and 60 graduate
+          degrees, including graduate certificates, master's degrees, and doctorates,
+          through both traditional and online courses. Students attend classes in
+          one of the university's three colleges and its law school:
+        </p>
+        <ul>
+          <li>College of Business, Health, and Human Services</li>
+          <li>College of Humanities, Arts, Social Sciences, and Education</li>
+          <li>Donaghey College of Science, Technology, Engineering, and Mathematics</li>
+          <li>William H. Bowen School of Law</li>
+        </ul>
+        <p>
+          UA Little Rock provides a variety of on‑campus living options for students
+          ranging from traditional resident rooms to multiple‑bedroom apartments.
+        </p>
+
+        <h5>Student Life</h5>
+        <p>
+          The student life at UA Little Rock is typical of public universities in the
+          United States. It is characterized by student‑run organizations and
+          affiliation groups that support social, academic, athletic, and religious
+          activities and interests. Services offered by the Office of Campus Life
+          include intramural sports and fitness programs, diversity programs, leadership
+          development, peer tutoring, the student government association, student
+          support programs and fraternity and sorority life.
+        </p>
+
+        <!-- Ordered list illustrating student body composition by race and ethnicity -->
+        <h4>Student Body Composition (as of May 2, 2022)</h4>
+        <ol>
+          <li>White – 48%</li>
+          <li>Black – 27%</li>
+          <li>Other – 15%</li>
+          <li>Hispanic – 4%</li>
+          <li>Foreign national – 3%</li>
+        </ol>
+
+        <!-- Definition list illustrating campus living options -->
+        <h4>Campus Living Options</h4>
+        <dl>
+          <dt>Residence Hall</dt>
+          <dd>Traditional student housing located on the eastern side of campus.</dd>
+          <dt>University Village</dt>
+          <dd>Apartment complex on the southern side of campus offering multi‑bedroom units.</dd>
+          <dt>Learning Communities</dt>
+          <dd>Specialized communities focused on criminal justice, arts and culture, majors and careers, future business innovators, nursing careers, and STEM.</dd>
+        </dl>
+
+        <!-- Block quote demonstrating how to mark up block level quotations -->
+        <blockquote cite="https://en.wikipedia.org/wiki/University_of_Arkansas_at_Little_Rock">
+          UA Little Rock’s 14 athletic teams are known as the Little Rock Trojans.  The
+          school sponsors sports such as baseball, basketball, golf, volleyball,
+          soccer, swimming/diving, cross country, track and field, and wrestling.  Little
+          Rock will move to the Ohio Valley Conference for the 2022–23 season.
+        </blockquote>
+
+        <!-- Table summarizing fictional enrollment statistics -->
+        <h4>Enrollment Statistics by Year</h4>
+        <table border="1">
+          <caption>UA Little Rock Enrollment by Race/Ethnicity (Fictional Data)</caption>
+          <tr>
+            <th scope="col">Year</th>
+            <th scope="col">White (%)</th>
+            <th scope="col">Black (%)</th>
+            <th scope="col">Hispanic (%)</th>
+            <th scope="col">Other (%)</th>
+          </tr>
+          <tr>
+            <td>2018</td>
+            <td>50</td>
+            <td>25</td>
+            <td>3</td>
+            <td>22</td>
+          </tr>
+          <tr>
+            <td>2019</td>
+            <td>49</td>
+            <td>26</td>
+            <td>4</td>
+            <td>21</td>
+          </tr>
+          <tr>
+            <td>2020</td>
+            <td>48</td>
+            <td>27</td>
+            <td>4</td>
+            <td>21</td>
+          </tr>
+          <tr>
+            <td>2021</td>
+            <td>48</td>
+            <td>27</td>
+            <td>5</td>
+            <td>20</td>
+          </tr>
+        </table>
+
+        <!-- Figure including an image of the UALR campus -->
+        <figure>
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/d/d5/UALR_Student_Services_Center,_8_April_2013.jpg"
+            alt="UALR Student Services Center"
+            width="600"
+            height="400"
+          />
+          <figcaption>UALR Student Services Center (Source: Wikimedia Commons)</figcaption>
+        </figure>
+      </section>
+      <!-- End of content section -->
+
+      <!-- Footer containing contact information and back to top link -->
+      <footer>
+        <h6>
+          &copy; 2025 Dante Colon ·
+          <a href="mailto:DLorenzoColon@gmail.com">Email me</a>
+          · <a href="#top">Back to Top</a>
+        </h6>
+      </footer>
+      <!-- End of footer -->
+    </main>
+    <!-- End of main -->
+  </body>
 </html>
