CSS Demo Assignment Setup

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <li>
           <a href="prototype/index.html" title="Prototype HTML5 Assignment">Prototype HTML5 Assignment</a>
         </li>
+        <li>
+          <a href="css-demo/index.html" title="CSS Demo Assignment">CSS Demo Assignment</a>
+        </li>
       </ul>
     </nav>
