Add completion page for Flexbox Froggy Level 24 with screenshot

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <li>
           <a href="css-demo/index.html" title="CSS Demo Assignment">CSS Demo Assignment</a>
         </li>
+        <li>
+          <a href="flexbox-froggy/index.html" title="Flexbox Froggy Assignment">Flexbox Froggy Assignment</a>
+        </li>
       </ul>
     </nav>
