Add positioning lab pages with structured HTML and CSS styles

--- a/index.html
+++ b/index.html
@@ -26,5 +26,19 @@
         <li>
           <a href="flexbox-froggy/index.html" title="Flexbox Froggy Assignment">Flexbox Froggy Assignment</a>
         </li>
+        <li>Positioning Lab</li>
+        <ul>
+          <li>
+            <a href="positioning-lab/absolute-1.html" title="Absolute 1">Absolute 1</a>
+          </li>
+          <li>
+            <a href="positioning-lab/absolute-2.html" title="Absolute 2">Absolute 2</a>
+          </li>
+          <li>
+            <a href="positioning-lab/float-1.html" title="Float 1">Float 1</a>
+          </li>
+          <li>
+            <a href="positioning-lab/float-2.html" title="Float 2">Float 2</a>
+          </li>
       </ul>
     </nav>
