--- a/positioning-lab/float-2.html
+++ b/positioning-lab/float-2.html
@@ -8,52 +8,72 @@
   <title>Positioning Lab</title>
   <style type="text/css">
     /* ---------------Box Sizing----------------- */
-    html {
+    * {
       box-sizing: border-box;
     }
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
+
     body {
-      background-color: #ECECEC;
-      font-weight: bold;
-      font-family: Tahoma, Geneva, sans-serif;
-      color: #FFF;
+      background: #ECECEC;
+      font-family: Tahoma, sans-serif;
       text-align: center;
-      line-height: 24px;
+      font-weight: bold;
+      color: #fff;
     }
+
     #wrapper {
-      background-color: #FFF;
-      border: 1px solid #c0c0c0;
       width: 800px;
-      margin-right: auto;
-      margin-left: auto;
-      text-shadow: 2px 2px #000;
+      margin: 0 auto;
+      background: #fff;
+      border: 1px solid #c0c0c0;
+      padding: 25px;
     }
-    #navy {
-      background-color: #001f3f;
-    }
-    #teal {
-      background-color: #39CCCC;
-    }
-    #blue {
-      background-color: #0074D9;
-    }
+
+    #navy,
+    #teal,
+    #blue,
     #aqua {
-      background-color: #7FDBFF;
+      width: 23%;
+      height: 150px;
+      float: left;
+      margin-right: 2%;
+      margin-bottom: 20px;
     }
+
+    #aqua {
+      margin-right: 0;
+    }
+
+    #navy {
+      background: #001f3f;
+    }
+
+    #teal {
+      background: #39CCCC;
+    }
+
+    #blue {
+      background: #0074D9;
+    }
+
+    #aqua {
+      background: #7FDBFF;
+    }
+
     #footer {
-      background-color: #666;
+      background: #666;
+      clear: both;
+      padding: 10px;
+      margin-top: 20px;
     }
+
     h1 {
       color: #000;
       font-weight: normal;
-      padding: 50px;
+      padding: 40px;
     }
   </style>
 </head>
+
 <body>
   <h1>Float 2</h1>
   <section id="wrapper">
