--- a/index.html
+++ b/index.html
@@ -40,5 +40,19 @@
           <li>
             <a href="positioning-lab/float-2.html" title="Float 2">Float 2</a>
           </li>
+        </ul>
+        <li>CSS Grid Lab</li>
+        <ul>
+          <li>
+            <a href="css-grid-lab/grid-two-col-equal.html" title="Grid Two Col Equal">Grid Two Col Equal</a>
+          </li>
+          <li>
+            <a href="css-grid-lab/grid-two-col-stacked.html" title="Grid Two Col Stacked">Grid Two Col Stacked</a>
+          </li>
+          <li>
+            <a href="css-grid-lab/grid-two-col-left.html" title="Grid Two Col Left">Grid Two Col Left</a>
+          </li>
+          <li>
+            <a href="css-grid-lab/grid-two-col-right.html" title="Grid Two Col Right">Grid Two Col Right</a>
       </ul>
     </nav>
